@@ -1,3 +1,11 @@
+2006-02-18  Jon A. Cruz  <jon@joncruz.org>
+	* src/widgets/desktop-widget.cpp, src/dialogs/swatches.cpp,
+	  src/dialogs/swatches.h, src/ui/previewholder.cpp, 
+	  src/ui/previewfillable.h, src/ui/previewholder.h:
+
+	  Removed horizontal scroll bar from swatches when embedded.
+
+
 2006-02-15  Michael Wybrow  <mjwybrow@users.sourceforge.net>
 
 	*  src/document.cpp, src/document.h, src/sp-conn-end-pair.cpp, 
